# Customer_Churn_Causal

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
data/: generate_data.py
docs/: blog_post.md  index.html
src/: baseline_model.py  causal_model.py  uplift.py
tests/: eval_causal_quality.py  test_gate.py
