[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "churn-causal"
version = "0.1.0"
description = "Customer churn causal inference: ATE + CATE estimation and uplift targeting"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "dowhy>=0.11",
    "econml>=0.15",
    "scipy>=1.10",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pre-commit>=3.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "data*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py312"
